fixed menu z-index

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -50,7 +50,8 @@
   left: 0;
   padding-top: 110px;
   background: var(--col-white-two);
-
+  z-index: 999;
+  
   &.shown {
     display: block;
   }
